--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,55 @@
 #TODO will be used in the 'Composing images' section of the Hands-on Lab
+
+version: '3.7'
+
+services:
+  mysql: #How to configure this image: https://hub.docker.com/_/mysql
+    image: mysql:5.7.27
+    volumes:
+      - ./quotes:/docker-entrypoint-initdb.d
+      - mysql-data:/var/lib/mysql
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=secret
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:4.7
+    ports:
+      - "8888:80"
+    links:
+      - mysql
+    environment:
+      - MYSQL_USERNAME=root
+      - MYSQL_ROOT_PASSWORD=secret
+      - PMA_HOST=mysql
+    depends_on:
+      - mysql
+
+  payara:
+    image: back-end
+    ports:
+      - "8080:8080"
+      - "4848:4848"
+      - "8181:8181"
+      - "8009:8009"
+    links:
+      - mysql:mysql
+    depends_on:
+      - mysql
+
+  web:
+    build:
+      context: ./web
+      dockerfile: Dockerfile
+    image: web
+    ports:
+      - "3000:3000"
+    links:
+      - payara
+    depends_on:
+      - payara
+
+volumes:
+  mysql-data:
+    driver: local
