--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,26 +13,28 @@ services:
     networks:
       - backend
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin:4.7
-    ports:
-      - "8888:80"
-    links:
-      - mysql
-    environment:
-      - MYSQL_USERNAME=root
-      - MYSQL_ROOT_PASSWORD=secret
-      - PMA_HOST=mysql
-    depends_on:
-      - mysql
-    networks:
-      - backend
+# commented out to make it more production like...
+#
+#  phpmyadmin:
+#    image: phpmyadmin/phpmyadmin:4.7
+#    ports:
+#      - "8888:80"
+#    links:
+#      - mysql
+#    environment:
+#      - MYSQL_USERNAME=root
+#      - MYSQL_ROOT_PASSWORD=secret
+#      - PMA_HOST=mysql
+#    depends_on:
+#      - mysql
+#    networks:
+#      - backend
 
   quote-service:
     image: back-end
     ports:
       - "8080:8080"
-      - "4848:4848"
+#      - "4848:4848"
     links:
       - mysql
     depends_on:
