Updating the lot to java 11 and fixing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,19 @@
 version: '3'
 
 services:
+#  mysql: #How to configure this image: https://hub.docker.com/_/mysql
+#    image: mysql:5.7.27
+#    volumes:
+#      - ./quotes:/docker-entrypoint-initdb.d
+#      - mysql-data:/var/lib/mysql
+#    environment:
+#      - MYSQL_ROOT_PASSWORD=secret
+#    networks:
+#      - backend
   mysql: #How to configure this image: https://hub.docker.com/_/mysql
-    image: mysql:5.7.27
-    volumes:
-      - ./quotes:/docker-entrypoint-initdb.d
-      - mysql-data:/var/lib/mysql
+    image: ivonet/mysql-quote-db
+    ports:
+      - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=secret
     networks:
@@ -15,26 +23,26 @@ services:
 
 # commented out to make it more production like...
 #
-#  phpmyadmin:
-#    image: phpmyadmin/phpmyadmin:4.7
-#    ports:
-#      - "8888:80"
-#    links:
-#      - mysql
-#    environment:
-#      - MYSQL_USERNAME=root
-#      - MYSQL_ROOT_PASSWORD=secret
-#      - PMA_HOST=mysql
-#    depends_on:
-#      - mysql
-#    networks:
-#      - backend
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:4.7
+    ports:
+      - "8888:80"
+    links:
+      - mysql
+    environment:
+      - MYSQL_USERNAME=root
+      - MYSQL_ROOT_PASSWORD=secret
+      - PMA_HOST=mysql
+    depends_on:
+      - mysql
+    networks:
+      - backend
 
   quote-service:
     image: back-end
     ports:
       - "8080:8080"
-#      - "4848:4848"
+      - "4848:4848"
     links:
       - mysql
     depends_on:
