--- a/images/dfs-server/Dockerfile
+++ b/images/dfs-server/Dockerfile
@@ -1,12 +1,13 @@
-FROM ivonet/payara:5.193
+FROM ivonet/payara:5.194
 
 ARG PWD
 LABEL maintainer="IvoNet.nl"
 ENV MYSQL_VERION="5.1.48"
 
+USER root
 ENV PASSWORD ${PWD:-secret}
 RUN echo "AS_ADMIN_PASSWORD=${PASSWORD}">/opt/pwd.txt \
- && curl -s "http://central.maven.org/maven2/mysql/mysql-connector-java/$MYSQL_VERION/mysql-connector-java-$MYSQL_VERION.jar" -o "/opt/mysql-connector-java-$MYSQL_VERION.jar" \
+ && curl -s "https://central.maven.org/maven2/mysql/mysql-connector-java/$MYSQL_VERION/mysql-connector-java-$MYSQL_VERION.jar" -o "/opt/mysql-connector-java-$MYSQL_VERION.jar" \
  && /opt/payara5/bin/asadmin start-domain domain1 \
  && /opt/payara5/bin/asadmin --user admin --passwordfile /opt/pwd.txt add-library "/opt/mysql-connector-java-$MYSQL_VERION.jar" \
  && /opt/payara5/bin/asadmin --user admin --passwordfile /opt/pwd.txt create-jdbc-connection-pool \
@@ -17,3 +18,4 @@ RUN echo "AS_ADMIN_PASSWORD=${PASSWORD}">/opt/pwd.txt \
     --connectionpoolid quote_dbConnectionPool jdbc/quote_db \
  && /opt/payara5/bin/asadmin stop-domain domain1 \
  && rm -f "/opt/pwd.txt" "/opt/mysql-connector-java-$MYSQL_VERION.jar"
+USER serveradmin
