--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,23 @@
 version: '3'
 
 services:
-#  mysql: #How to configure this image: https://hub.docker.com/_/mysql
-#    image: mysql:5.7.27
-#    volumes:
-#      - ./quotes:/docker-entrypoint-initdb.d
-#      - mysql-data:/var/lib/mysql
-#    environment:
-#      - MYSQL_ROOT_PASSWORD=secret
-#    networks:
-#      - backend
   mysql: #How to configure this image: https://hub.docker.com/_/mysql
-    image: ivonet/mysql-quote-db
-    ports:
-      - 3306:3306
+    image: mysql:5.7.27
+    volumes:
+      - ./quotes:/docker-entrypoint-initdb.d
+      - mysql-data:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=secret
     networks:
       - backend
+#  mysql: #How to configure this image: https://hub.docker.com/_/mysql
+#    image: ivonet/mysql-quote-db
+#    ports:
+#      - 3306:3306
+#    environment:
+#      - MYSQL_ROOT_PASSWORD=secret
+#    networks:
+#      - backend
 
 # commented out to make it more production like...
 #
