--- a/web/Dockerfile.alpine
+++ b/web/Dockerfile.alpine
@@ -1,4 +1,4 @@
-FROM alpine:3.9
+FROM alpine:3.11
 
 WORKDIR /app
 
@@ -10,4 +10,4 @@ COPY site/* ./
 RUN npm install
 
 EXPOSE 3000
-CMD ["/usr/local/bin/node", "server.js", "3000"]
+CMD ["/usr/bin/node", "server.js", "3000"]
