--- a/web/Dockerfile.node
+++ b/web/Dockerfile.node
@@ -1,8 +1,8 @@
-FROM node:12.9.1-alpine
+FROM node:13.6.0-alpine3.11
 
 WORKDIR /app
 COPY site/* /app/
 RUN npm install
 
 EXPOSE 3000
-ENTRYPOINT ["/usr/local/bin/node", "server.js", "3000"]
+ENTRYPOINT ["/usr/bin/node", "server.js", "3000"]
