textual and favicon

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,2 +1,2 @@
 # TODO containerize the site
-# The only important file is the 'index.html' unless you use node :-)
+# Do you need everything in your solution?
