fixed node httpd bug

--- a/web/site/package.json
+++ b/web/site/package.json
@@ -10,10 +10,8 @@
   "author": "Ivo Woltring",
   "license": "WTFPL",
   "dependencies": {
-    "fs": "0.0.1-security",
-    "fs-walk": "0.0.2",
-    "httpd": "0.0.2",
-    "path": "^0.12.7",
-    "url": "^0.11.0"
+    "fs": "^0.0.1-security",
+    "fs-walk": "^0.0.2",
+    "http": "^0.0.1-security"
   }
 }
