--- a/web/Dockerfile.node
+++ b/web/Dockerfile.node
@@ -1,8 +1,9 @@
-FROM node:13.6.0-alpine3.11
+FROM node:15.10.0-alpine3.11
 
 WORKDIR /app
 COPY site/* /app/
-RUN npm install
+RUN npm install -g npm 2>/dev/null \
+ && npm install
 
 EXPOSE 3000
-ENTRYPOINT ["/usr/bin/node", "server.js", "3000"]
+ENTRYPOINT ["/usr/local/bin/node", "server.js", "3000"]
