--- a/web/site/package.json
+++ b/web/site/package.json
@@ -11,7 +11,7 @@
   "license": "WTFPL",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "fs-walk": "^0.0.2",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
