--- a/web/Dockerfile.node
+++ b/web/Dockerfile.node
@@ -1,9 +1,8 @@
-FROM node:15.10.0-alpine3.11
+FROM node:17-alpine3.15
 
 WORKDIR /app
 COPY site/* /app/
-RUN npm install -g npm 2>/dev/null \
- && npm install
+RUN npm install
 
 EXPOSE 3000
 ENTRYPOINT ["/usr/local/bin/node", "server.js", "3000"]
