--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@
 version: '3'
 
 services:
-  mysql: #How to configure this image: https://hub.docker.com/_/mysql
-    image: mysql:5.7.27
+  mariadb: #How to configure this image: https://hub.docker.com/_/mysql
+    image: mariadb:10.7.3
     volumes:
       - ./quotes:/docker-entrypoint-initdb.d
       - mysql-data:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=secret
+      - MARIADB_ROOT_PASSWORD=secret
     networks:
       - backend
 
@@ -22,7 +22,7 @@ services:
     environment:
       - MYSQL_USERNAME=root
       - MYSQL_ROOT_PASSWORD=secret
-      - PMA_HOST=mysql
+      - PMA_HOST=mariadb
     depends_on:
       - mysql
     networks:
