--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,1 @@
-FROM python:3.9.6-alpine3.14
-
-WORKDIR /www
-COPY site/index.html .
-
-EXPOSE 3000
-ENTRYPOINT ["python3", "-m", "http.server", "--bind", "0.0.0.0", "--directory", "/www", "3000"]
+# TODO containerize the site
