--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,5 +1,2 @@
-FROM amazoncorretto:17
 
-ADD target/back-end.jar /opt/app.jar
-
-CMD ["java", "-jar", "/opt/app.jar"]
+# TODO containerise the back-end application
