--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,20 +13,20 @@ services:
     networks:
       - backend
 
-#  phpmyadmin:
-#    image: phpmyadmin/phpmyadmin:4.7
-#    ports:
-#      - "8888:80"
-#    links:
-#      - db
-#    environment:
-#      - MYSQL_USERNAME=root
-#      - MYSQL_ROOT_PASSWORD=secret
-#      - PMA_HOST=db
-#    depends_on:
-#      - db
-#    networks:
-#      - backend
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:4.7
+    ports:
+      - "8888:80"
+    links:
+      - db
+    environment:
+      - MYSQL_USERNAME=root
+      - MYSQL_ROOT_PASSWORD=secret
+      - PMA_HOST=db
+    depends_on:
+      - db
+    networks:
+      - backend
 
   quote-service:
     image: dfs/back-end
