--- a/back-end/src/main/resources/application-docker.properties
+++ b/back-end/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/quote
+spring.datasource.url=jdbc:mysql://db:3306/quote
 spring.datasource.username=root
 spring.datasource.password=secret
 spring.sql.init.mode=never
