--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 
-# Docker version datasource config
-spring.datasource.url=jdbc:mysql://db:3306/quote
-spring.datasource.username=root
-spring.datasource.password=secret
+#test datasource
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./target/db.h2;MODE=MySQL
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled=true
+spring.sql.init.mode=always
